--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<h1>Diet Planner</h1>
+<h2>Macro Goals, Balanced Diet:</h2>
+<h3>Calories: 2,848</h3>
+<h3>Protein: 175g</h3>
+<h3>Carbs: 380g</h3>
+<h3>Fat: 81g</h3>
+<h3>Sugar: &lt;76g</h3>
+
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Calories</th>
+            <th>Fat</th>
+            <th>Carbs</th>
+            <th>Protein</th> 
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let food of macros">
+            <td>{{food.Name}}</td>
+            <td>{{food.Calories}}</td>
+            <td>{{food.Fat}}</td>
+            <td>{{food.Carbs}}</td>
+            <td>{{food.Protein}}</td>
+        </tr>
+    </tbody>
+</table>
