--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #b3e6b3;
+}
+
+button {
+    background-color: #b3ecff;
+    border-radius: 10px;
+    padding: 6px;
+    transition: 0.3s;
+}
+button:hover {
+    background-color: #99e6ff;
+}
+
+p, h1, h2, h3, table, button {
+    font-family:monospace;
+}
