create-food: Reset button implemented

--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -20,6 +20,7 @@
     </table>
 
     <button (click)="totalMacros()">Finish</button>
+    <button style="margin-left: 10px" (click)="reset()">Reset</button> 
 
     <h3>Current food</h3>
     <table class="currentFoodTable">
