--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,8 +17,8 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let food of macros">
-            <td>{{food.Name}}</td>
+        <tr *ngFor="let food of macros.foods">
+            <td>{{food.id}}</td>
             <td>{{food.Calories}}</td>
             <td>{{food.Fat}}</td>
             <td>{{food.Carbs}}</td>
