Day Tracker page created; buttons given 10px border radius

--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -77,11 +77,11 @@
                 <!-- <td><button (click)="createEntirelyNewFood(
                     N.value, Cal.value, F.value, Car.value, P.value)">
                     Save New Food</button></td> -->
-                <td><input required type="text" placeholder="Enter Food Name + Serving Size" size="30" name="Name" ngModel></td>
-                <td><input required type="text" placeholder="Enter Calories" name="Calories" ngModel></td>
-                <td><input required type="text" placeholder="Fat Grams" name="Fat" ngModel></td>
-                <td><input required type="text" placeholder="Enter Carbs" name="Carbs" ngModel></td>
-                <td><input required type="text" placeholder="Enter Protein" name="Protein" ngModel></td>
+                <td><input required type="text" placeholder="Enter food name + serving size" size="30" name="Name" ngModel></td>
+                <td><input required type="text" placeholder="Enter calories" name="Calories" ngModel></td>
+                <td><input required type="text" placeholder="Enter grams fat" name="Fat" ngModel></td>
+                <td><input required type="text" placeholder="Enter grams carbs" name="Carbs" ngModel></td>
+                <td><input required type="text" placeholder="Enter grams protein" name="Protein" ngModel></td>
             </tr>
         </tbody>
     </table>
