--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,2 +1,3 @@
 <button class="button1" routerLink="home">Home</button>
 <button routerLink="create-food">Create a Food</button>
+<button routerLink="day-tracker">Day Tracker</button>
