--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ button {
     border-radius: 10px;
     padding: 6px;
     transition: 0.3s;
+    height: 35px;
 }
 button:hover {
     background-color: #99e6ff;
@@ -14,4 +15,9 @@ button:hover {
 
 p, h1, h2, h3, table, button {
     font-family:monospace;
+}
+input {
+    border-radius: 10px;
+    height: 17px;
+    padding: 6px;
 }
