--- a/src/app/day-tracker/day-tracker.component.html
+++ b/src/app/day-tracker/day-tracker.component.html
@@ -3,3 +3,22 @@
     <input type="text" id="autocomplete" placeholder="Start typing the food name">
     <ul class="list"></ul>
 </form>
+
+<div class="ng-autocomplete">
+    <ng-autocomplete
+        [data]="countries"
+        [searchKeyword]="keyword"
+        placeholder="Search for a food"
+        historyIdentifier="countries"
+        [itemTemplate]="itemTemplate">
+        [notFoundTemplate]="notFoundTemplate"
+    </ng-autocomplete>
+
+    <ng-template #itemTemplate let-item>
+        <a [innerHTML]="item.name"></a>
+    </ng-template>
+
+    <ng-template #notFoundTemplate let-notFound>
+        <div [innerHTML]="notFound"></div>
+    </ng-template>
+</div>
