daily-plan component created along with createDailyPlan() basis; Daily Plan button on nav bar functional

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,4 @@
 <button class="button1" routerLink="home">Home</button>
 <button routerLink="create-food">Create a Food</button>
 <button routerLink="day-tracker">Day Tracker</button>
+<button routerLink="daily-plan">Daily Plan</button>
