--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,15 @@
+<br>
+To properly run this program, use the following command: <br>
+json-server --w macros.json & ng s --o <br>
 <h1>Diet Planner</h1>
 <h2>Macro Goals, Balanced Diet:</h2>
 <h3>Calories: 2,848</h3>
 <h3>Protein: 175g</h3>
 <h3>Carbs: 380g</h3>
 <h3>Fat: 81g</h3>
-<h3>Sugar: &lt;76g</h3>
-
+<!-- <h3>Sugar: &lt;76g</h3>
+ -->
+<h4>Saved Foods:</h4>
 <table>
     <thead>
         <tr>
