fixed up Create Food page by reorganizing layout and enable text & table hiding & revealing

--- a/src/app/create-food/create-food.component.css
+++ b/src/app/create-food/create-food.component.css
@@ -34,3 +34,11 @@ tr:nth-child(even) {
 #totals {
     font-weight: bold;
 }
+
+#hiddenTitle {
+    display:none;
+}
+
+#hiddenTable {
+    display:none;
+}
