--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -1,31 +1,5 @@
-<h2>Saved Foods</h2>
-<table>
-    <thead>
-        <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Calories</th>
-            <th>Fat</th>
-            <th>Carbs</th>
-            <th>Protein</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let food of macro.foods">
-            <button (click)="addToNewFood(food)">Add</button>
-            <td>{{food.id}}</td>
-            <td>{{food.Calories}}</td>
-            <td>{{food.Fat}}</td>
-            <td>{{food.Carbs}}</td>
-            <td>{{food.Protein}}</td>
-        </tr>
-    </tbody>
-</table>
-<button (click)="reset()">Reset</button> 
-
-
-<h2>Combine Foods</h2>
-<table class="createFoodTable">
+<h2 id="hiddenTitle">Current combination</h2>
+<table class="createFoodTable" id="hiddenTable">
     <thead>
         <td></td>
             <th>Name</th>
@@ -57,9 +31,33 @@
     </tbody>
 </table>
 
+<h2>Combine saved foods and store the new food in database</h2>
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Calories</th>
+            <th>Fat</th>
+            <th>Carbs</th>
+            <th>Protein</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let food of macro.foods">
+            <button (click)="addToNewFood(food)" (click)="reveal()">Add</button>
+            <td>{{food.id}}</td>
+            <td>{{food.Calories}}</td>
+            <td>{{food.Fat}}</td>
+            <td>{{food.Carbs}}</td>
+            <td>{{food.Protein}}</td>
+        </tr>
+    </tbody>
+</table>
+<button (click)="reset()">Reset</button> 
 
 <form #form="ngForm" (ngSubmit)="createEntirelyNewFood(form)">
-    <h2>Create a New Food</h2>
+    <h2>Create a new food to store in database</h2>
     <table class="createFoodTable">
         <thead>
                 <th>Name</th>
