--- a/src/app/day-tracker/day-tracker.component.html
+++ b/src/app/day-tracker/day-tracker.component.html
@@ -1,8 +1,4 @@
-<h3>Add the foods you've eaten today</h3>
-<form autocomplete="off">
-    <input type="text" id="autocomplete" placeholder="Start typing the food name">
-    <ul class="list"></ul>
-</form>
+<h3>Keep track of your progress. Add the foods you've eaten today</h3>
 
 <div class="ng-autocomplete">
     <ng-autocomplete
