--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,5 @@
+To properly run this in-development program, use the following command: <br>
+json-server --w db.json & ng s --o <br>
 <button class="button1" routerLink="home">Home</button>
 <button routerLink="create-food">Create a Food</button>
 <button routerLink="day-tracker">Day Tracker</button>
