--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -56,8 +56,10 @@
 </table>
 <button (click)="reset()">Reset</button> 
 
+
+
 <form #form="ngForm" (ngSubmit)="createEntirelyNewFood(form)">
-    <h2>Create a new food to store in database</h2>
+    <h2>Create an entirely new food to store in database</h2>
     <table class="createFoodTable">
         <thead>
                 <th>Name</th>
