Added heights array to CalculatorService and started input boxes for user stats

--- a/src/app/daily-plan/daily-plan.component.html
+++ b/src/app/daily-plan/daily-plan.component.html
@@ -38,3 +38,10 @@
     </tbody>
     <button click="addToWeekly">Add this daily meal plan to weekly meal plan</button>
 </table>
+
+<form #ngForm="ngForm">
+    <input type="number" placeholder="Enter your age">
+    <input type="text" placeholder="Enter your sex">
+    <input type="text" placeholder="Enter your height">
+    <input type="text" placeholder="Enter your weight">
+</form>
