--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -31,7 +31,33 @@
     </tbody>
 </table>
 
-<h3>Combine saved foods and store the new food in database</h3>
+<form #form="ngForm" (ngSubmit)="createEntirelyNewFood(form)">
+    <h3>Create an entirely new food to store in the database</h3>
+    <table class="createFoodTable">
+        <thead>
+                <th>Name</th>
+                <th>Calories</th>
+                <th>Fat</th>
+                <th>Carbs</th>
+                <th>Protein</th>
+        </thead>
+        <tbody>
+            <tr>
+                <button [disabled]="!form.valid" type="submit">Save New Food</button>
+                <td><input required type="text" placeholder="Enter food name + serving size" size="30" name="Name" ngModel></td>
+                <td><input required type="number" min="0" placeholder="Enter calories" name="Calories" ngModel></td>
+                <td><input required type="number" min="0" placeholder="Enter grams fat" name="Fat" ngModel></td>
+                <td><input required type="number" min="0" placeholder="Enter grams carbs" name="Carbs" ngModel></td>
+                <td><input required type="number" min="0" placeholder="Enter grams protein" name="Protein" ngModel></td>
+            </tr>
+        </tbody>
+    </table>
+</form>
+
+<h2>OR...</h2>
+<h3>Combine saved foods and store the new food in the database.</h3>
+<h4>For example, "Tortilla" + "Ground Beef" + "Egg x2" + "Avocado" = "Breakfast Burrito"</h4>
+
 <table>
     <thead>
         <tr>
@@ -55,28 +81,3 @@
     </tbody>
 </table>
 <button (click)="reset()">Reset</button> 
-
-
-
-<form #form="ngForm" (ngSubmit)="createEntirelyNewFood(form)">
-    <h3>Create an entirely new food to store in database</h3>
-    <table class="createFoodTable">
-        <thead>
-                <th>Name</th>
-                <th>Calories</th>
-                <th>Fat</th>
-                <th>Carbs</th>
-                <th>Protein</th>
-        </thead>
-        <tbody>
-            <tr>
-                <button [disabled]="!form.valid" type="submit">Save New Food</button>
-                <td><input required type="text" placeholder="Enter food name + serving size" size="30" name="Name" ngModel></td>
-                <td><input required type="number" min="0" placeholder="Enter calories" name="Calories" ngModel></td>
-                <td><input required type="number" min="0" placeholder="Enter grams fat" name="Fat" ngModel></td>
-                <td><input required type="number" min="0" placeholder="Enter grams carbs" name="Carbs" ngModel></td>
-                <td><input required type="number" min="0" placeholder="Enter grams protein" name="Protein" ngModel></td>
-            </tr>
-        </tbody>
-    </table>
-</form>
