--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,6 +1,7 @@
-To properly run this in-development program, use the following command: <br>
+To properly incorporate JSON server and run this in-development program, use the following bash command: <br>
 json-server --w db.json & ng s --o <br>
 <button class="button1" routerLink="home">Home</button>
 <button routerLink="create-food">Create a Food</button>
-<button routerLink="day-tracker">Day Tracker</button>
-<button routerLink="daily-plan">Meal Plan</button>
+<!-- <button routerLink="day-tracker">Day Tracker</button>
+ -->
+ <button routerLink="daily-plan">Meal Plan</button>
