--- a/src/app/daily-plan/daily-plan.component.html
+++ b/src/app/daily-plan/daily-plan.component.html
@@ -1,26 +1,66 @@
 <h3>Enter the following information so your curated meal plan can be created. [not yet funcional]</h3>
 <form #form="ngForm" (ngSubmit)="calculateMacros(form)">
-    <input type="number" name="age" placeholder="Age" [(ngModel)]="defaultAge" ngModel min="18" max="80">
 
-    <select>
-        <option  disabled selected>Gender</option>
-        <option name="gender" *ngFor="let gender of genders" required ngModel>{{gender}}</option>
-    </select>
+
+    <input type="number" name="age" placeholder="Age" [(ngModel)]="defaultAge" ngModel min="18" max="80" required ngModel>
+
 
     <input type="number" name="height" placeholder="Height (inches)"  [(ngModel)]="defaultHeight" required ngModel min="25" max="240">
-    <input type="number" name="weight" placeholder="Weight (pounds)" [(ngModel)]="defaultWeight" required ngModel min="39" max="420">
-    <select>
-        <option disabled selected>Activity Level</option>
-        <option name="activityLevel" *ngFor="let activityLevel of activityLevels" [value]="activityLevel" required ngModel>{{activityLevel}}</option>
-    </select>
 
-    <!--Your macro needs: -->
+
+    <input type="number" name="weight" placeholder="Weight (pounds)" [(ngModel)]="defaultWeight" required ngModel min="39" max="420">
+
+
+    
+<!-- <div [formGroup]="myGroup">
+    <select name="gender" 
+    formControlName="gender" 
+    ngValue="gender.value" 
+    [(ngModel)]="genders">
+        <option disabled selected>Gender</option>
+        <option (onSubmit)="filterData(gender)" *ngFor="let gender of genders" required [value]="gender[0]">{{gender}}</option>
+    </select>
+</div>
+
+    <select name="activityLevel">
+        <option disabled selected>Activity Level</option>
+        <option *ngFor="let activityLevel of activityLevels" [ngValue]="activityLevel" required>{{activityLevel}}</option>
+    </select> -->
+
+
+    <mat-form-field appearance="fill">
+        <mat-label>Gender</mat-label>
+        <mat-select [(ngModel)]="genders[0]" name="gender">
+            <mat-option *ngFor="let gender of genders" [value]="gender">
+                {{gender}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field>
+        <select matNativeControl required>
+            <option [ngValue]="" value="Male">Male</option>
+            <option value="Female">Female</option>
+        </select>
+    </mat-form-field>
+
+
 
     <button 
         [disabled]="!form.valid" type="submit" (click)="createDailyPlan()" (click)="reveal()">
         Click to make a randomized daily meal plan
     </button>
 </form>
+
+
+
+
+
+    <!--Your macro needs: -->
+
+
+
+
 
 <table id="hiddenUntilClick">
     This work-in-progress prototype outputs a plan that adds individual foods until one of the following limits are met (or will be surpassed with further additions) for the day:<br>
