--- a/src/app/daily-plan/daily-plan.component.html
+++ b/src/app/daily-plan/daily-plan.component.html
@@ -1,22 +1,22 @@
-<h3>Enter the following information so your curated meal plan can be created. [not yet funcional]</h3>
-<form #form="ngForm" (ngSubmit)="calculateMacros(form)">
+<h3>Enter the following information so your curated meal plan can be created. [in development]</h3>
+<form #form="ngForm" [formGroup]="myForm" (submit)="calculateMacros(form)">
+ADD SUBMISSION
+
+    <input type="number" name="age" placeholder="Age"   min="18" max="80" required >
 
 
-    <input type="number" name="age" placeholder="Age" [(ngModel)]="defaultAge" ngModel min="18" max="80" required ngModel>
+    <input type="number" name="height" placeholder="Height (inches)"  required  min="25" max="240">
 
 
-    <input type="number" name="height" placeholder="Height (inches)"  [(ngModel)]="defaultHeight" required ngModel min="25" max="240">
-
-
-    <input type="number" name="weight" placeholder="Weight (pounds)" [(ngModel)]="defaultWeight" required ngModel min="39" max="420">
+    <input type="number" name="weight" placeholder="Weight (pounds)" required  min="39" max="420">
 
 
 
     <mat-form-field>
         <mat-label>Gender</mat-label>
-        <mat-select [(ngModel)]="genders[0]" name="gender">
-            <mat-option></mat-option>
-            <mat-option *ngFor="let gender of genders" [value]="gender">
+        <mat-select name="genderControl" formControlName="genderControl"
+        [value]="genders" ngDefaultControl>
+            <mat-option *ngFor="let gender of genders">
                 {{gender}}
             </mat-option>
         </mat-select>
@@ -26,7 +26,7 @@
 
     <mat-form-field >
         <mat-label>Activity Level</mat-label>
-        <mat-select [(ngModel)]="activityLevels[0]" name="activityLevel">
+        <mat-select name="activityLevel" formControlName="activityLevel" ngDefaultControl>
             <mat-option *ngFor="let activityLevel of activityLevels" [value]="activityLevel">
                 {{activityLevel}}
             </mat-option>
