able to send form to calculator component

--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -55,8 +55,8 @@
 </form>
 
 <h2>OR...</h2>
-<h3>Combine saved foods and store the new food in the database.</h3>
-<h4>For example, "Tortilla" + "Ground Beef" + "Egg x2" + "Avocado" = "Breakfast Burrito"</h4>
+<h3>Combine saved foods and store that new food in the database.</h3>
+<h4>For example, "Tortilla" + "Ground Beef" + "Egg" x2 + "Avocado" = "Breakfast Burrito"</h4>
 
 <table>
     <thead>
