--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -77,6 +77,7 @@
             <td>{{food.Fat}}</td>
             <td>{{food.Carbs}}</td>
             <td>{{food.Protein}}</td>
+            <button (click)="deleteFood(food)">Delete from DB</button>
         </tr>
     </tbody>
 </table>
