--- a/src/app/daily-plan/daily-plan.component.css
+++ b/src/app/daily-plan/daily-plan.component.css
@@ -16,7 +16,6 @@ button {
 
 input, select {
     border-radius: 10px;
-    padding: px;
     border-width: 2px;
     margin-right: 1px;
     width: 200px;
@@ -27,5 +26,10 @@ input, select {
 }
 
 mat-form-field {
-    color:black
+    color:black;
+}
+
+form {
+    margin-left: auto;
+    margin-right: auto;
 }
