removed heroku hosting

--- a/src/app/daily-plan/daily-plan.component.html
+++ b/src/app/daily-plan/daily-plan.component.html
@@ -35,25 +35,10 @@
         </mat-select>
     </mat-form-field>
 
-
-
-   <!--  <button 
-        [disabled]="!form.valid" type="submit" (click)="createDailyPlan()" (click)="reveal()">
+    <button [disabled]="!form.valid" type="submit" (click)="reveal()">
         Click to make a randomized daily meal plan
-    </button> -->
-    <button 
-    [disabled]="!form.valid" type="submit" (click)="reveal()">
-    Click to make a randomized daily meal plan
-</button>
+    </button>
 </form>
-
-
-
-
-
-    <!--Your macro needs: -->
-
-
 
 
 
