entered <br> in daily plan

--- a/src/app/daily-plan/daily-plan.component.html
+++ b/src/app/daily-plan/daily-plan.component.html
@@ -49,9 +49,10 @@
     Protein: {{goalMacros[1]}}g<br>
     Carbs: {{goalMacros[2]}}g<br>
     Fat: {{goalMacros[3]}}g<br>
+    <br>
 
     <thead>
-        Example daily diet plan
+        <strong>Example daily diet plan</strong>
         <tr>
             <th>Name</th>
             <th>Calories</th>
