Got program running properly and updated README

--- a/src/app/create-food/create-food.component.html
+++ b/src/app/create-food/create-food.component.html
@@ -24,7 +24,7 @@
 
 <h2>OR...</h2>
 <h3>Combine saved foods and store that new food in the database.</h3>
-<h4>For example, "Tortilla" + "Ground Beef" + "Egg" x2 + "Avocado" = "Breakfast Burrito"</h4>
+<h4>For example, Add below "Tortilla" + "Ground Beef" + "Egg" x2 + "Avocado" = "Breakfast Burrito"</h4>
 
 <h2 id="hiddenTitle">Current combination</h2>
 <table class="createFoodTable" id="hiddenTable">
